footer form начало

--- a/index.html
+++ b/index.html
@@ -424,6 +424,15 @@
                     </li>
                 </ul>
             </div>
+            <form class="under-form">
+                <div class="contact-form">
+                    <label for="" class="form-label">
+                        Подпишитесь на рассылку
+                    </label>
+                    <input type="email" name="email" placeholder="E-mail" />
+                </div>
+                <button type="submit">Подписаться</button>
+            </form>
         </div>
     </footer>
 
