--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 </address>
             </div>
             <div class="footer-social">
-                <h3 class="foot-social-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                <h3 class="foot-social-title">присоединяйтесь</h3>
                 <ul class="foot-social-list">
                     <li class="foot-social-list-item">
                         <a class="foot-social-link">
@@ -424,27 +424,57 @@
                     </li>
                 </ul>
             </div>
-            <form class="under-form">
-                <div class="contact-form">
-                    <label for="" class="form-label">
-                        Подпишитесь на рассылку
-                    </label>
-                    <input type="email" name="email" placeholder="E-mail" />
-                </div>
-                <button type="submit">Подписаться</button>
+            <form class="contact-form">
+
+                Подпишитесь на рассылку
+
+                <input type="email" class="contact-form-under" name="user-email" placeholder="E-mail" required />
+
+                <button type="submit" class="contact-form-btn">Подписаться</button>
+
             </form>
         </div>
     </footer>
 
     <!-- ========================== МОДАЛЬНОЕ ОКНО ============================-->
 
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
+        <!-- is-hidden -->
         <div class="modal">
             <button type="button" class="modal-close-btn" data-modal-close>
                 <svg class="modal-close-btn-icon" width="18" height="18">
                     <use href="./images/icon/symbol-defs.svg#close-black-icon"></use>
                 </svg>
             </button>
+
+            <form class="modal-form">
+                <label class="modal-form-field">
+                    <span class="modal-form-input-desc"> Имя* </span>
+                    <span class="modal-form-input-wrapper">
+                        <input type="text" name="user_name" class="modal-form-input" required pattern="[a-zA-Zа-яА-Я]+"
+                            minlength="2" />
+                        <span class="modal-form-input-icon"></span>
+                    </span>
+                </label>
+                <label class="modal-form-field">
+                    <span class="modal-form-input-desc"> Телефон* </span>
+                    <span class="modal-form-input-wrapper">
+                        <input type="tel" name="user_phone" class="modal-form-input" required
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" />
+                        <span class="modal-form-input-icon"></span>
+                    </span>
+                </label>
+                <label class="modal-form-field">
+                    <span class="modal-form-input-desc"> Сообщение </span>
+                    <textarea name="user_message" class="modal-form-message" placeholder="Введите текст"></textarea>
+                </label>
+                <input id="user-policy" type="checkbox" name="user_policy" class="modal-form-check visually-hidden" />
+                <label for="user-policy" class="modal-form-check-desc">
+                    Соглашаюсь с рассылкой и принимаю&nbsp;<a href="">Условия договора </a>
+                </label>
+                <button type="submit" class="modal-form-submit">отправить</button>
+            </form>
+
         </div>
     </div>
     <script src="./js/modal.js"></script>
