--- a/index.html
+++ b/index.html
@@ -425,13 +425,14 @@
                 </ul>
             </div>
             <form class="contact-form">
-
-                Подпишитесь на рассылку
-
-                <input type="email" class="contact-form-under" name="user-email" placeholder="E-mail" required />
-
-                <button type="submit" class="contact-form-btn">Подписаться</button>
-
+                <p class="messege-form">подпишитесь на рассылку</p>
+                <div class="contact-form-under">
+                    <input type="email" class="contact-form-input" name="user-email" placeholder="E-mail" required />
+                    <button type="submit" class="contact-form-btn">Подписаться<svg class="form-form-btn-icon" width="24"
+                            height="24">
+                            <use href="./images/icon/symbol-defs.svg#icon-send"></use></button>
+                    </svg>
+                </div>
             </form>
         </div>
     </footer>
