--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
     </main>
     <!-- ================================ АДРЕС ФУТЕР =================================== -->
     <footer class=" under">
-        <div class="container under-address-social">
-            <div>
+        <div class="container under-container">
+            <div class="under--address-social">
                 <address class="under-address">
                     <a class="logo-foot link" href="./index.html" lang="en">Web<span
                             class="logo-studio-foot link">Studio</span></a>
@@ -430,8 +430,9 @@
                     <input type="email" class="contact-form-input" name="user-email" placeholder="E-mail" required />
                     <button type="submit" class="contact-form-btn">Подписаться<svg class="form-form-btn-icon" width="24"
                             height="24">
-                            <use href="./images/icon/symbol-defs.svg#icon-send"></use></button>
-                    </svg>
+                            <use href="./images/icon/symbol-defs_2.svg#icon-send"></use>
+                        </svg></button>
+
                 </div>
             </form>
         </div>
@@ -449,31 +450,48 @@
             </button>
 
             <form class="modal-form">
+                <p class="modal-form-text">Оставьте свои данные, мы вам перезвоним</p>
                 <label class="modal-form-field">
-                    <span class="modal-form-input-desc"> Имя* </span>
+                    <span class="modal-form-input-desc">Имя</span>
                     <span class="modal-form-input-wrapper">
                         <input type="text" name="user_name" class="modal-form-input" required pattern="[a-zA-Zа-яА-Я]+"
                             minlength="2" />
-                        <span class="modal-form-input-icon"></span>
+                        <svg class="modal-form-input-icon" width="18" height="18">
+                            <use href="./images/icon/symbol-defs_2.svg#person-black"></use>
+                        </svg>
                     </span>
                 </label>
                 <label class="modal-form-field">
-                    <span class="modal-form-input-desc"> Телефон* </span>
+                    <span class="modal-form-input-desc"> Телефон </span>
                     <span class="modal-form-input-wrapper">
                         <input type="tel" name="user_phone" class="modal-form-input" required
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" />
-                        <span class="modal-form-input-icon"></span>
+                        <svg class="modal-form-input-icon" width="18" height="18">
+                            <use href="./images/icon/symbol-defs_2.svg#phone-black"></use>
+                        </svg>
+
                     </span>
                 </label>
                 <label class="modal-form-field">
-                    <span class="modal-form-input-desc"> Сообщение </span>
+                    <span class="modal-form-input-desc"> Почта </span>
+                    <span class="modal-form-input-wrapper">
+                        <input type="email" name="user_email" class="modal-form-input" required />
+                        <svg class="modal-form-input-icon" width="18" height="18">
+                            <use href="./images/icon/symbol-defs_2.svg#email-black"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label class="modal-form-field change-modal-form-field">
+                    <span class="modal-form-input-desc"> Комментарий </span>
                     <textarea name="user_message" class="modal-form-message" placeholder="Введите текст"></textarea>
+                </label>
                 </label>
                 <input id="user-policy" type="checkbox" name="user_policy" class="modal-form-check visually-hidden" />
                 <label for="user-policy" class="modal-form-check-desc">
-                    Соглашаюсь с рассылкой и принимаю&nbsp;<a href="">Условия договора </a>
+                    Соглашаюсь с рассылкой и принимаю&nbsp;<a href="#" class="text-form-check-desc">Условия договора
+                    </a>
                 </label>
-                <button type="submit" class="modal-form-submit">отправить</button>
+                <button type="submit" class="modal-form-submit">Отправить</button>
             </form>
 
         </div>
