исправление д.з.6 в футоре портфолио

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         </section>
     </main>
     <!-- ================================ АДРЕС ФУТЕР =================================== -->
-    <footer class=" under">
+    <footer class="under">
         <div class="container under-container">
             <div class="under--address-social">
                 <address class="under-address">
@@ -440,7 +440,7 @@
 
     <!-- ========================== МОДАЛЬНОЕ ОКНО ============================-->
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <!-- is-hidden -->
         <div class="modal">
             <button type="button" class="modal-close-btn" data-modal-close>
