--- a/portfolio.html
+++ b/portfolio.html
@@ -203,32 +203,33 @@
     </main>
     <!-- ================================ АДРЕС ФУТЕР ================================= -->
     <footer class="under">
-        <div class="container under-address-social">
+        <div class="container under-container">
+            <div class="under--address-social">
+                <address class="under-address">
+                    <a class="logo-foot link" href="./index.html" lang="en">Web<span
+                            class="logo-studio-foot link">Studio</span></a>
+                    <ul class="under-item list">
+                        <li class="address">
+                            <a class="" href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/"
+                                target="_blank" rel="noopener nofollow"><span class="footer-address">г. Киев, пр-т
+                                    Леси
+                                    Украинки, 26</span></a>
 
-            <address class="under-address">
-                <a class="logo-foot link" href="./index.html" lang="en">Web<span
-                        class="logo-studio-foot link">Studio</span></a>
-                <ul class="under-item list">
-                    <li class="address">
-                        <a class="" href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/"
-                            target="_blank" rel="noopener nofollow"><span class="footer-address">г. Киев, пр-т
-                                Леси
-                                Украинки, 26</span></a>
-
-                    </li>
-                    <li class="contact">
-                        <a class="under-emeil">info@example.com</a>
-                    </li>
-                    <li class="contact">
-                        <a class="under-phone-nomber">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
+                        </li>
+                        <li class="contact">
+                            <a class="under-emeil">info@example.com</a>
+                        </li>
+                        <li class="contact">
+                            <a class="under-phone-nomber">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
             <div class="footer-social">
-                <h3 class="foot-social-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                <h3 class="foot-social-title">присоединяйтесь</h3>
                 <ul class="foot-social-list">
                     <li class="foot-social-list-item">
-                        <a href="" class="foot-social-link">
+                        <a class="foot-social-link">
                             <svg class="social-item-logo" width="20" height="20">
                                 <use href="./images/icon/symbol-defs.svg#instagram-2">
                                 </use>
@@ -260,7 +261,17 @@
                     </li>
                 </ul>
             </div>
+            <form class="contact-form">
+                <p class="messege-form">подпишитесь на рассылку</p>
+                <div class="contact-form-under">
+                    <input type="email" class="contact-form-input" name="user-email" placeholder="E-mail" required />
+                    <button type="submit" class="contact-form-btn">Подписаться<svg class="form-form-btn-icon" width="24"
+                            height="24">
+                            <use href="./images/icon/symbol-defs_2.svg#icon-send"></use>
+                        </svg></button>
 
+                </div>
+            </form>
         </div>
     </footer>
 </body>
