--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     <main>
         <section class="portfolio section">
             <div class="container">
-                <h1 class="button-hidden">Кнопки</h1>
+                <h1 class="visually-hidden">Кнопки</h1>
                 <ul class="filter-button list">
                     <li class="filter-btn"><button class="modal-btn link main-btm" type="button">Все</button></li>
                     <li class="filter-btn"><button class="modal-btn link" type="button">Веб-сайты</button></li>
@@ -68,7 +68,7 @@
                     <li class="filter-btn"><button class="modal-btn link" type="button">Маркетинг</button></li>
                 </ul>
 
-                <h2 class="project-hidden">Проект</h2>
+                <h2 class="visually-hidden">Проект</h2>
                 <ul class="project-list list">
                     <li class="project-item">
                         <div class="project-list-img">
